--- a/exipure/index.html
+++ b/exipure/index.html
@@ -50,7 +50,7 @@
 </div>
 </section>
 <script>
-video_id='v6naeqo1pl';video_type='desktop';fullscreen_video='1';ld_video_controls='false';ld_image_continue='/images/video-pc.png';ld_image_unmute='/images/sound-pc.png';</script>
+video_id='v6naeqo1pl';video_type='desktop';fullscreen_video='1';ld_video_controls='false';ld_image_continue='images/video-pc.png';ld_image_unmute='images/sound-pc.png';</script>
 <script src="js/SLV.min.js"></script>
 <div class="buy-block" style="display:none;">
 <div class="order"></div>
